[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["Danilo da Conceição Nascimento <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.78.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
black = "^22.6.0"
isort = "^5.10.1"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
mypy = "^0.961"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    'tcc.genetic_algorithm',
    'tcc.utils',
    'tcc.api',
    'tcc.ag',
    "tests",
    "manager.py",
]

[[tool.mypy.overrides]]
module = "tcc.core.*"
ignore_missing_imports = true
