[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = [ "Danilo da Conceição Nascimento <daconnas.dcn@gmail.com>",]

[tool.black]
line-length = 79

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [ "tcc.genetic_algorithm", "tcc.utils", "tcc.api", "tcc.ag", "tests", "manager.py",]
[[tool.mypy.overrides]]
module = "tcc.core.*"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
matplotlib = "^3.7.2"
pydantic = "^2.0.2"

[tool.poetry.group.development.dependencies]
pytest = "^7.4.0"
ipdb = "^0.13.13"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
toml = "^0.10.2"
pre-commit = "^3.3.3"

